--- a/helm/kube-prometheus-stack/template/values.yaml.tmpl
+++ b/helm/kube-prometheus-stack/template/values.yaml.tmpl
@@ -17,7 +17,7 @@ prometheus:
     paths:
       - /
     pathType: ImplementationSpecific
-    tls: []
+    tls:
       - secretName: prometheus-general-tls
         hosts:
           - {{ prometheus_internal_fqdn }}
