loki gateway ingress

--- a/templates/loki-values.yaml.tmpl
+++ b/templates/loki-values.yaml.tmpl
@@ -64,3 +64,32 @@ monitoring:
 
 backend:
   replicas: 2
+
+gateway:
+  ingress:
+    # -- Specifies whether an ingress for the gateway should be created
+    enabled: true
+    # -- Ingress Class Name. MAY be required for Kubernetes versions >= 1.18
+    ingressClassName: "alb"
+    # -- Annotations for the gateway ingress
+    annotations:
+      alb.ingress.kubernetes.io/group.name: loki
+      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
+      alb.ingress.kubernetes.io/scheme: internal
+      alb.ingress.kubernetes.io/ssl-redirect: '443'
+    # -- Labels for the gateway ingress
+    labels: {}
+    # -- Hosts configuration for the gateway ingress
+    hosts:
+      - host: ${loki_gateway_route53_fqdn}
+        paths:
+          - path: /
+            pathType: Prefix
+      - host: ${loki_gateway_internal_fqdn}
+        paths:
+          - path: /
+            pathType: Prefix
+    # -- TLS configuration for the gateway ingress
+    tls:
+      - hosts:
+          - ${loki_gateway_internal_fqdn}
