--- a/templates/kubernetes-event-exporter.yaml.tmpl
+++ b/templates/kubernetes-event-exporter.yaml.tmpl
@@ -12,23 +12,7 @@ config:
       - name: "dump"
         stdout: {}
       - name: "loki"
-        webhook:
-          endpoint: "${loki_gateway_monitoring_url}/loki/api/v1/push"
-          headers:
-            Content-Type: application/json
-            User-Agent: "kube-event-exporter"
-          layout:
-            streams:
-              - stream:
-                  app: kube-api
-                  source: event-exporter
-                  severity: "{{ .Type }}"
-                  reason: "{{ .Reason }}"
-                  name: "{{ .InvolvedObject.Name }}"
-                  namespace: "{{ .InvolvedObject.Namespace }}"
-                  kind: "{{ .InvolvedObject.Kind }}"
-                  host: "{{ .Source.Host }}"
-                  component: "{{ .Source.Component }}"
-                values:
-                  - - "{{ mul .GetTimestampMs 1000000 }}"
-                    - "severity={{ .Type }} namespace={{ .InvolvedObject.Namespace }} object={{ .InvolvedObject.Kind }}/{{ .InvolvedObject.Name }} reason={{ .Reason }} message={{ .Message }}"
+        loki:
+          streamLabels:
+            kube-api: true
+          url: ${loki_gateway_monitoring_url}/loki/api/v1/push
