--- a/templates/loki-values.yaml.tmpl
+++ b/templates/loki-values.yaml.tmpl
@@ -9,6 +9,9 @@ loki:
       chunks: ${loki_bucket}
     type: s3
 
+  query_scheduler:
+    max_outstanding_requests_per_tenant: 4096
+
   schema_config:
     configs:
     - from: "2023-05-31"
@@ -32,6 +35,14 @@ loki:
       type: local
       local:
         directory: /var/loki/rules
+
+  limits_config:
+    split_queries_by_interval: 24h
+    max_query_parallelism: 100
+
+  frontend:
+    max_outstanding_per_tenant: 4096
+
 
 serviceAccount:
   create: true
