--- a/templates/ingress_nginx-values.yaml.tmpl
+++ b/templates/ingress_nginx-values.yaml.tmpl
@@ -6,7 +6,7 @@ controller:
   # -- Will add custom configuration options to Nginx https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/configmap/
   config:
     ssl-redirect: false
-    server-snippet: ${server_snipppet}
+    server-snippet: ${server_snippet}
   resources:
     limits:
       cpu: 1000m
