--- a/templates/ingress_nginx-values.yaml.tmpl
+++ b/templates/ingress_nginx-values.yaml.tmpl
@@ -5,18 +5,15 @@ controller:
     special: 8000
   # -- Will add custom configuration options to Nginx https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/configmap/
   config:
-    ssl-redirect: "false" # we use `special` port to control ssl redirection
-    server-snippet: |
-      client_max_body_size 50M;
-      listen 8000;
-      if ( $server_port = 80 ) {
-        return 308 https://$host$request_uri;
-      }
+    ssl-redirect: false
+    server-snippet: ${server_snippet}
   resources:
     limits:
       cpu: 1000m
       memory: 2048Mi
-
+    requests:
+      cpu: 100m
+      memory: 90Mi
   service:
     enabled: true
     ports:
@@ -32,18 +29,11 @@ controller:
       # -- Enables an additional internal load balancer (besides the external one).
       enabled: true
       # -- Annotations are mandatory for the load balancer to come up. Varies with the cloud service.
-      annotations:
-        service.beta.kubernetes.io/aws-load-balancer-internal: "true"
-        service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
-        service.beta.kubernetes.io/aws-load-balancer-scheme: internal
-        service.beta.kubernetes.io/aws-load-balancer-ssl-cert: ${acm_certificate}
-        service.beta.kubernetes.io/aws-load-balancer-ssl-ports: 443
-        service.beta.kubernetes.io/aws-load-balancer-type: nlb
-
-      ports:
+      annotations: {}
+      ports: {}
         http: 80
         https: 443
-
+      # -- Custom target port mapping for internal service
       targetPorts:
         http: http
         https: special
