--- a/templates/kubernetes-event-exporter.yaml.tmpl
+++ b/templates/kubernetes-event-exporter.yaml.tmpl
@@ -2,11 +2,12 @@ config:
   logLevel: debug
   logFormat: json
   route:
+    routes:
     - match:
       - receiver: "loki"
-    receivers:
-      - name: "loki"
-        webhook:
-          endpoint: "${loki_gateway_monitoring_url}/loki/api/v1/push"
-          headers:
-            User-Agent: kube-event-exporter 1.0
+  receivers:
+  - name: "loki"
+    loki:
+      streamLabels:
+        source: kube-api
+      url: ${loki_gateway_monitoring_url}/loki/api/v1/push
