--- a/helm/kube-prometheus-stack/template/values.yaml.tmpl
+++ b/helm/kube-prometheus-stack/template/values.yaml.tmpl
@@ -37,6 +37,17 @@ prometheus:
 
     probeSelectorNilUsesHelmValues: false
 
+    storageSpec: {}
+      volumeClaimTemplate:
+        spec:
+          storageClassName: efs
+          accessModes: ["ReadWriteOnce"]
+          resources:
+            requests:
+              storage: 50Gi
+        selector: {}
+
+
 prometheus-node-exporter:
   affinity:
     nodeAffinity:
