fix persistency for prometheus

--- a/helm/kube-prometheus-stack/template/values.yaml.tmpl
+++ b/helm/kube-prometheus-stack/template/values.yaml.tmpl
@@ -37,7 +37,7 @@ prometheus:
 
     probeSelectorNilUsesHelmValues: false
 
-    storageSpec: {}
+    storageSpec:
       volumeClaimTemplate:
         spec:
           storageClassName: efs
