kubernetes event exporter fix to run on platform NG

--- a/templates/kubernetes-event-exporter.yaml.tmpl
+++ b/templates/kubernetes-event-exporter.yaml.tmpl
@@ -14,3 +14,11 @@ config:
       streamLabels:
         source: kube-api
       url: ${loki_gateway_monitoring_url}/loki/api/v1/push
+
+nodeSelector:
+  platform: "true"
+
+tolerations:
+  - key: "platform"
+    operator: "Exists"
+    effect: "NoSchedule"
